se cambia el color al titulo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="background-image: url('fondo.avif'); background-size: cover; background-position: center; margin: 0; padding: 0;">
    
     <div class="container mt-5">
-        <h1 class="mb-4">Tareas 3° TECDA</h1>
+        <h1 class="mb-4, text-primary">Tareas 3° TECDA</h1>
         <form id="taskForm">
             <div class="input-group mb-3">
                 <input type="text" class="form-control" id="taskInput" placeholder="Agregar nueva tarea">
